# shurl

./: .gitignore  README.md  shurl.cabal
src/: Database.hs  KeyGenerator.hs  Main.hs
src/Templates/: ErrorPage.hs  Header.hs  Index.hs  Information.hs  NewPage.hs  Template.hs
static/css/: main.css
