------------------
-- Cabal Config --
name:             shurl
version:          0.0.0.0
synopsis:         A URL shortener written in Haskell.
license-file:     LICENSE
author:           Crockeo
maintainer:       crockeo@gmail.com
category:         Web
build-type:       Simple
cabal-version: >= 1.10

------------------
-- Build Config --
executable shurl
  main-is: src/Main.hs

  build-depends: base == 4.6.*
               , scotty

  default-language: Haskell2010