------------------
-- Cabal Config --
name:             shurl
version:          0.0.0.0
synopsis:         A URL shortener written in Haskell.
license-file:     LICENSE
author:           Crockeo
maintainer:       crockeo@gmail.com
category:         Web
build-type:       Simple
cabal-version: >= 1.10

------------------
-- Build Config --
executable shurl
  hs-source-dirs: src/
                , src/templates/

  main-is: Main.hs

  build-depends: base == 4.6.*
               , wai-middleware-static
               , blaze-builder
               , blaze-markup
               , blaze-html
               , scotty
               , text

  default-language: Haskell2010